--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,15 +1,22 @@
 // Navigation code here
 
 nav {
-    max-width: 1000px;
-    margin: 0 auto;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    opacity: .8;
+    width: 60%;
+    margin: 0 20%;
+    
     .centering();
     align-content: center;
     flex-direction: column;
     background-color: @footer-background;
 
+
     @media @mobile {
-        max-width: 500px;
+        width: 95%;
+        margin: 0 2.5%;
     }
 
 
@@ -25,8 +32,16 @@ nav {
         a {
             text-decoration: none;
             font-size: 1.6rem;
-            padding: 10px 1.5%;
+            padding: 10px 1.75%;
             color: @header-font-color;
+            width: 10%;
+           
+
+        }
+        a:hover {
+            transition: color .25s ease-in .25s;
+            text-decoration: underline;
+            color: @nav-font; 
         }
     }
 }
